ui: add Tailwind build (local) and compiled CSS; ready for Catalyst

--- a/backend/public/ui/index.html
+++ b/backend/public/ui/index.html
@@ -5,24 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DocSearchEngine — UI Sandbox</title>
 
-  <!-- Tailwind CDN (prototype mode; no build step yet) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    // Optional: extend Tailwind a bit for nicer defaults
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            brand: {
-              50:  '#eef2ff',
-              500: '#111827', /* match current button color */
-              600: '#0b1220'
-            }
-          }
-        }
-      }
-    }
-  </script>
+  <link rel="stylesheet" href="/assets/app.css">
 
   <style>
     /* Keep it small and safe for now; we’ll switch to compiled CSS later */
