ui: include compiled Tailwind CSS and link it on /ui

--- a/backend/public/ui/index.html
+++ b/backend/public/ui/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DocSearchEngine — UI Sandbox</title>
 
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="stylesheet" href="/assets/app.css?v=1">
 
   <style>
     /* Keep it small and safe for now; we’ll switch to compiled CSS later */
