--- a/backend/public/ui/index.html
+++ b/backend/public/ui/index.html
@@ -49,31 +49,48 @@
         <div class="grid gap-6 px-6 py-6 md:grid-cols-2">
           <!-- Search -->
           <div>
-            <label for="q" class="block text-sm font-medium text-slate-700">Search</label>
-            <input id="q" name="q" type="text" placeholder="Try typing here…"
-              class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400" />
+            <label for="ui-search" class="block text-sm font-medium text-slate-700">Search</label>
+            <input
+              id="ui-search"
+              name="q"
+              type="text"
+              placeholder="Try typing here…"
+              class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400"
+            />
           </div>
 
           <!-- Filter -->
           <div>
             <div class="flex items-center justify-between">
-              <label for="filter" class="block text-sm font-medium text-slate-700">Filter</label>
+              <label for="ui-filter" class="block text-sm font-medium text-slate-700">Filter</label>
             </div>
-            <select id="filter" name="filter"
-              class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400">
+            <select
+              id="ui-filter"
+              name="filter"
+              class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400"
+            >
               <option>All</option>
             </select>
           </div>
         </div>
 
         <div class="flex items-center justify-end gap-3 border-t px-6 py-5">
-          <button type="button" class="rounded-lg border border-slate-300 bg-white px-4 py-2 text-sm font-medium text-slate-700 hover:bg-slate-50">
+          <button
+            id="ui-cancel"
+            type="button"
+            class="rounded-lg border border-slate-300 bg-white px-4 py-2 text-sm font-medium text-slate-700 hover:bg-slate-50"
+          >
             Cancel
           </button>
-          <button type="button" class="rounded-lg bg-slate-900 px-4 py-2 text-sm font-semibold text-white hover:bg-black">
+          <button
+            id="ui-apply"
+            type="button"
+            class="rounded-lg bg-slate-900 px-4 py-2 text-sm font-semibold text-white hover:bg-black"
+          >
             Apply
           </button>
         </div>
+        <div id="ui-results" class="mt-6"></div>
       </section>
 
       <!-- Next -->
@@ -87,86 +104,68 @@
 
       <!-- existing "Next" section stays -->
 
-      <!-- Results -->
-      <section id="results-card" class="mt-8 rounded-2xl border bg-white p-6 shadow-sm hidden">
-        <div class="mb-4 flex items-center justify-between">
-          <h3 class="text-base font-semibold">Results</h3>
-          <span id="results-meta" class="text-sm text-slate-500"></span>
-        </div>
-        <ul id="results-list" class="divide-y divide-slate-200"></ul>
-      </section>
-
       <script>
         (function () {
-          const q = document.getElementById('q');
-          const filter = document.getElementById('filter');
-          const btnApply = document.querySelector('button[type="button"].apply-btn') || document.querySelector('button:contains("Apply")');
+          const qInput = document.querySelector('#ui-search');
+          const filterSelect = document.querySelector('#ui-filter');
+          const applyBtn = document.querySelector('#ui-apply');
+          const cancelBtn = document.querySelector('#ui-cancel');
+          const resultsBox = document.querySelector('#ui-results');
 
-          // Attach explicit classes so we can target reliably
-          document.querySelectorAll('button').forEach(b => {
-            if (b.textContent.trim() === 'Apply') b.classList.add('apply-btn');
-            if (b.textContent.trim() === 'Cancel') b.classList.add('cancel-btn');
-          });
+          function renderResults(data) {
+            if (!resultsBox) return;
+            if (!data?.ok) {
+              resultsBox.innerHTML =
+                '<div class="rounded-md bg-red-50 p-3 text-sm text-red-700">Search failed.</div>';
+              return;
+            }
+            if (!data.count) {
+              resultsBox.innerHTML =
+                '<div class="rounded-md bg-yellow-50 p-3 text-sm text-yellow-800">No results.</div>';
+              return;
+            }
+            resultsBox.innerHTML = `
+        <ul class="divide-y divide-gray-200 rounded-lg border border-gray-200 bg-white">
+          ${data.results
+            .map(
+              (r) => `
+            <li class="p-4">
+              <div class="flex items-center justify-between">
+                <h4 class="text-sm font-medium text-gray-900">${r.title}</h4>
+                <span class="rounded-md bg-gray-100 px-2 py-0.5 text-xs text-gray-600">score ${(r.score * 100).toFixed(0)}%</span>
+              </div>
+              <p class="mt-1 text-sm text-gray-600">${r.snippet}</p>
+            </li>`
+            )
+            .join('')}
+        </ul>`;
+          }
 
-          const resultsCard = document.getElementById('results-card');
-          const resultsList = document.getElementById('results-list');
-          const resultsMeta = document.getElementById('results-meta');
-
-          async function runSearch(ev) {
-            ev?.preventDefault?.();
-            const payload = { q: q.value || '', filter: filter.value || 'All' };
-
-            // optimistic UI
-            resultsCard.classList.remove('hidden');
-            resultsList.innerHTML = `
-              <li class="py-6">
-                <div class="text-sm text-slate-500">Searching…</div>
-              </li>`;
-
+          async function runSearch() {
+            const q = (qInput?.value || '').trim();
+            const filter = (filterSelect?.value || 'all').trim();
+            if (resultsBox) {
+              resultsBox.innerHTML = '<div class="text-sm text-gray-500">Searching…</div>';
+            }
             try {
-              const res = await fetch('/api/search', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(payload)
-              });
-              const data = await res.json();
-
-              resultsMeta.textContent = `${data.count ?? 0} result(s)`;
-              resultsList.innerHTML = (data.items || []).map(item => `
-                <li class="py-6">
-                  <div class="flex items-start justify-between gap-4">
-                    <div>
-                      <h4 class="text-sm font-semibold text-slate-900">${item.title}</h4>
-                      <p class="mt-1 text-sm text-slate-600">${item.snippet}</p>
-                      <div class="mt-2 text-xs text-slate-500">Updated: ${item.updatedAt ?? ''}</div>
-                    </div>
-                    <div class="shrink-0 text-xs rounded-md bg-slate-100 px-2 py-1 text-slate-700">Score: ${item.score?.toFixed?.(2) ?? '—'}</div>
-                  </div>
-                </li>
-              `).join('') || `
-                <li class="py-6">
-                  <div class="text-sm text-slate-500">No results.</div>
-                </li>`;
-            } catch (err) {
-              console.error(err);
-              resultsMeta.textContent = '';
-              resultsList.innerHTML = `
-                <li class="py-6">
-                  <div class="text-sm text-red-600">Search failed. Please try again.</div>
-                </li>`;
+              const res = await fetch(
+                `/api/search?q=${encodeURIComponent(q)}&filter=${encodeURIComponent(filter)}`
+              );
+              renderResults(await res.json());
+            } catch (e) {
+              renderResults({ ok: false });
             }
           }
 
-          // Wire Apply + Enter key
-          document.querySelector('.apply-btn')?.addEventListener('click', runSearch);
-          q.addEventListener('keydown', e => { if (e.key === 'Enter') runSearch(e); });
+          applyBtn?.addEventListener('click', (e) => {
+            e.preventDefault();
+            runSearch();
+          });
 
-          // Optional: Cancel clears and hides results
-          document.querySelector('.cancel-btn')?.addEventListener('click', () => {
-            q.value = '';
-            resultsCard.classList.add('hidden');
-            resultsList.innerHTML = '';
-            resultsMeta.textContent = '';
+          cancelBtn?.addEventListener('click', (e) => {
+            e.preventDefault();
+            if (qInput) qInput.value = '';
+            if (resultsBox) resultsBox.innerHTML = '';
           });
         })();
       </script>
