--- a/backend/public/ui/index.html
+++ b/backend/public/ui/index.html
@@ -17,31 +17,50 @@
         theme: {
           container: { center: true, padding: "1rem" },
           extend: {
-            fontFamily: { sans: ["Inter", "ui-sans-serif", "system-ui", "Segoe UI", "Helvetica", "Arial", "Apple Color Emoji", "Segoe UI Emoji"] },
+            fontFamily: {
+              sans: [
+                "Inter",
+                "ui-sans-serif",
+                "system-ui",
+                "Segoe UI",
+                "Helvetica",
+                "Arial",
+                "Apple Color Emoji",
+                "Segoe UI Emoji",
+              ],
+            },
           },
         },
       };
     </script>
   </head>
-  <body class="min-h-screen bg-slate-50 font-sans text-slate-900">
+  <body class="min-h-screen bg-gradient-to-br from-blue-950 via-white to-red-600 font-sans text-blue-950 antialiased">
     <!-- Top bar -->
-    <header class="border-b bg-white/70 backdrop-blur supports-[backdrop-filter]:bg-white/60">
+    <header class="border-b border-blue-200 bg-white/80 backdrop-blur supports-[backdrop-filter]:bg-white/70">
       <nav class="container flex h-14 items-center justify-between">
-        <a href="/" class="text-lg font-semibold tracking-tight">DocSearchEngine</a>
+        <a href="/" class="text-lg font-semibold tracking-tight text-blue-900">
+          DocSearchEngine
+        </a>
         <ul class="flex items-center gap-6 text-sm">
-          <li><a class="text-slate-600 hover:text-slate-900" href="/login">Login</a></li>
-          <li><a class="text-slate-600 hover:text-slate-900" href="/health">Health</a></li>
-          <li><a class="font-medium text-slate-900" href="/ui">UI Sandbox</a></li>
+          <li>
+            <a class="text-blue-800 transition hover:text-red-600" href="/login">Login</a>
+          </li>
+          <li>
+            <a class="text-blue-800 transition hover:text-red-600" href="/health">Health</a>
+          </li>
+          <li>
+            <a class="font-semibold text-red-600" href="/ui">UI Sandbox</a>
+          </li>
         </ul>
       </nav>
     </header>
 
     <main class="container py-10">
       <!-- Card -->
-      <section class="rounded-2xl border bg-white shadow-sm">
-        <div class="border-b px-6 py-5">
-          <h2 class="text-lg font-semibold">Prototype Panel</h2>
-          <p class="mt-1 text-sm text-slate-600">
+      <section class="rounded-2xl border border-blue-200/70 bg-white/95 shadow-xl backdrop-blur">
+        <div class="border-b border-blue-100 px-6 py-5">
+          <h2 class="text-lg font-semibold text-blue-900">Prototype Panel</h2>
+          <p class="mt-1 text-sm text-blue-700/80">
             This page is for safe UI experiments. We’ll wire real Catalyst + build next.
           </p>
         </div>
@@ -49,43 +68,47 @@
         <div class="grid gap-6 px-6 py-6 md:grid-cols-2">
           <!-- Search -->
           <div>
-            <label for="ui-search" class="block text-sm font-medium text-slate-700">Search</label>
+            <label for="ui-search" class="block text-sm font-medium text-blue-800">
+              Search
+            </label>
             <input
               id="ui-search"
               name="q"
               type="text"
               placeholder="Try typing here…"
-              class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400"
+              class="mt-1 block w-full rounded-xl border-blue-200 bg-white/90 text-blue-950 shadow-sm transition focus:border-red-400 focus:ring-red-400"
             />
           </div>
 
           <!-- Filter -->
           <div>
             <div class="flex items-center justify-between">
-              <label for="ui-filter" class="block text-sm font-medium text-slate-700">Filter</label>
+              <label for="ui-filter" class="block text-sm font-medium text-blue-800">
+                Filter
+              </label>
             </div>
             <select
               id="ui-filter"
               name="filter"
-              class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400"
+              class="mt-1 block w-full rounded-xl border-blue-200 bg-white/90 text-blue-950 shadow-sm transition focus:border-red-400 focus:ring-red-400"
             >
               <option>All</option>
             </select>
           </div>
         </div>
 
-        <div class="flex items-center justify-end gap-3 border-t px-6 py-5">
+        <div class="flex items-center justify-end gap-3 border-t border-blue-100 px-6 py-5">
           <button
             id="ui-cancel"
             type="button"
-            class="rounded-lg border border-slate-300 bg-white px-4 py-2 text-sm font-medium text-slate-700 hover:bg-slate-50"
+            class="rounded-full border border-blue-200 bg-white px-4 py-2 text-sm font-semibold text-blue-800 transition hover:bg-blue-50"
           >
             Cancel
           </button>
           <button
             id="ui-apply"
             type="button"
-            class="rounded-lg bg-slate-900 px-4 py-2 text-sm font-semibold text-white hover:bg-black"
+            class="rounded-full bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-lg transition hover:bg-red-700"
           >
             Apply
           </button>
@@ -94,9 +117,9 @@
       </section>
 
       <!-- Next -->
-      <section class="mt-8 rounded-2xl border bg-white p-6 shadow-sm">
-        <h3 class="text-base font-semibold">Next</h3>
-        <p class="mt-1 text-sm text-slate-600">
+      <section class="mt-8 rounded-2xl border border-blue-200/70 bg-white/95 p-6 shadow-xl backdrop-blur">
+        <h3 class="text-base font-semibold text-blue-900">Next</h3>
+        <p class="mt-1 text-sm text-blue-700/80">
           When this page looks good, we’ll install Tailwind + Catalyst via npm and add a small build step while keeping
           Express serving both front and back.
         </p>
@@ -116,25 +139,25 @@
             if (!resultsBox) return;
             if (!data?.ok) {
               resultsBox.innerHTML =
-                '<div class="rounded-md bg-red-50 p-3 text-sm text-red-700">Search failed.</div>';
+                '<div class="rounded-md bg-red-100 p-3 text-sm font-semibold text-red-800">Search failed.</div>';
               return;
             }
             if (!data.count) {
               resultsBox.innerHTML =
-                '<div class="rounded-md bg-yellow-50 p-3 text-sm text-yellow-800">No results.</div>';
+                '<div class="rounded-md bg-blue-100 p-3 text-sm font-semibold text-blue-800">No results.</div>';
               return;
             }
             resultsBox.innerHTML = `
-        <ul class="divide-y divide-gray-200 rounded-lg border border-gray-200 bg-white">
+        <ul class="divide-y divide-blue-100 rounded-xl border border-blue-200 bg-white/95 shadow">
           ${data.results
             .map(
               (r) => `
             <li class="p-4">
               <div class="flex items-center justify-between">
-                <h4 class="text-sm font-medium text-gray-900">${r.title}</h4>
-                <span class="rounded-md bg-gray-100 px-2 py-0.5 text-xs text-gray-600">score ${(r.score * 100).toFixed(0)}%</span>
+                <h4 class="text-sm font-semibold text-blue-900">${r.title}</h4>
+                <span class="rounded-md bg-blue-100 px-2 py-0.5 text-xs font-semibold text-blue-800">score ${(r.score * 100).toFixed(0)}%</span>
               </div>
-              <p class="mt-1 text-sm text-gray-600">${r.snippet}</p>
+              <p class="mt-1 text-sm text-blue-700/90">${r.snippet}</p>
             </li>`
             )
             .join('')}
@@ -145,7 +168,7 @@
             const q = (qInput?.value || '').trim();
             const filter = (filterSelect?.value || 'all').trim();
             if (resultsBox) {
-              resultsBox.innerHTML = '<div class="text-sm text-gray-500">Searching…</div>';
+              resultsBox.innerHTML = '<div class="text-sm text-blue-700">Searching…</div>';
             }
             try {
               const res = await fetch(
