--- a/backend/public/app.html
+++ b/backend/public/app.html
@@ -166,25 +166,67 @@
     <div id="login-modal" class="fixed inset-0 z-50 hidden overflow-y-auto">
       <div class="flex min-h-screen items-center justify-center p-4">
         <div class="fixed inset-0 bg-black bg-opacity-25" onclick="closeLoginModal()"></div>
-        <div class="relative w-full max-w-md rounded-lg bg-white p-6 shadow-lg">
-          <h3 class="text-lg font-semibold">Login</h3>
-          <form id="login-form" class="mt-4 space-y-4">
+        <div class="relative w-full max-w-sm rounded-lg bg-white p-6 shadow-lg">
+          <div class="text-center mb-6">
+            <h2 class="text-2xl font-bold text-slate-900">Sign in to your account</h2>
+            <p class="mt-2 text-sm text-slate-600">Welcome back to DocSearchEngine</p>
+          </div>
+          <form id="login-form" class="space-y-6">
             <div>
-              <label class="block text-sm font-medium text-slate-700">Email</label>
-              <input type="email" name="email" required class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400">
+              <label for="login-email" class="block text-sm font-medium text-slate-700">Email address</label>
+              <input 
+                id="login-email"
+                type="email" 
+                name="email" 
+                required 
+                autocomplete="email"
+                class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400 sm:text-sm"
+                placeholder="Enter your email"
+              >
             </div>
             <div>
-              <label class="block text-sm font-medium text-slate-700">Password</label>
-              <input type="password" name="password" required class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400">
+              <label for="login-password" class="block text-sm font-medium text-slate-700">Password</label>
+              <input 
+                id="login-password"
+                type="password" 
+                name="password" 
+                required 
+                autocomplete="current-password"
+                class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400 sm:text-sm"
+                placeholder="Enter your password"
+              >
             </div>
-            <div class="flex justify-end space-x-3">
-              <button type="button" onclick="closeLoginModal()" class="rounded-lg border border-slate-300 bg-white px-4 py-2 text-sm font-medium text-slate-700 hover:bg-slate-50">Cancel</button>
-              <button type="submit" class="rounded-lg bg-slate-900 px-4 py-2 text-sm font-semibold text-white hover:bg-black">Login</button>
+            <div class="flex items-center justify-between">
+              <div class="flex items-center">
+                <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 rounded border-slate-300 text-slate-600 focus:ring-slate-500">
+                <label for="remember-me" class="ml-2 block text-sm text-slate-700">Remember me</label>
+              </div>
+              <div class="text-sm">
+                <a href="#" class="font-medium text-slate-600 hover:text-slate-500">Forgot your password?</a>
+              </div>
+            </div>
+            <div>
+              <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-slate-900 hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-500">
+                Sign in
+              </button>
             </div>
           </form>
-          <p class="mt-4 text-center text-sm text-slate-600">
-            Don't have an account? <button onclick="showRegisterModal()" class="text-slate-900 hover:underline">Register</button>
-          </p>
+          <div class="mt-6">
+            <div class="relative">
+              <div class="absolute inset-0 flex items-center">
+                <div class="w-full border-t border-slate-300" />
+              </div>
+              <div class="relative flex justify-center text-sm">
+                <span class="px-2 bg-white text-slate-500">Or continue with</span>
+              </div>
+            </div>
+            <div class="mt-6 text-center">
+              <p class="text-sm text-slate-600">
+                Don't have an account? 
+                <button onclick="showRegisterModal()" class="font-medium text-slate-900 hover:text-slate-700">Sign up</button>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -193,29 +235,76 @@
     <div id="register-modal" class="fixed inset-0 z-50 hidden overflow-y-auto">
       <div class="flex min-h-screen items-center justify-center p-4">
         <div class="fixed inset-0 bg-black bg-opacity-25" onclick="closeRegisterModal()"></div>
-        <div class="relative w-full max-w-md rounded-lg bg-white p-6 shadow-lg">
-          <h3 class="text-lg font-semibold">Register</h3>
-          <form id="register-form" class="mt-4 space-y-4">
+        <div class="relative w-full max-w-sm rounded-lg bg-white p-6 shadow-lg">
+          <div class="text-center mb-6">
+            <h2 class="text-2xl font-bold text-slate-900">Create your account</h2>
+            <p class="mt-2 text-sm text-slate-600">Join DocSearchEngine today</p>
+          </div>
+          <form id="register-form" class="space-y-6">
             <div>
-              <label class="block text-sm font-medium text-slate-700">Name</label>
-              <input type="text" name="name" required class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400">
+              <label for="register-name" class="block text-sm font-medium text-slate-700">Full name</label>
+              <input 
+                id="register-name"
+                type="text" 
+                name="name" 
+                required 
+                autocomplete="name"
+                class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400 sm:text-sm"
+                placeholder="Enter your full name"
+              >
             </div>
             <div>
-              <label class="block text-sm font-medium text-slate-700">Email</label>
-              <input type="email" name="email" required class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400">
+              <label for="register-email" class="block text-sm font-medium text-slate-700">Email address</label>
+              <input 
+                id="register-email"
+                type="email" 
+                name="email" 
+                required 
+                autocomplete="email"
+                class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400 sm:text-sm"
+                placeholder="Enter your email"
+              >
             </div>
             <div>
-              <label class="block text-sm font-medium text-slate-700">Password</label>
-              <input type="password" name="password" required class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400">
+              <label for="register-password" class="block text-sm font-medium text-slate-700">Password</label>
+              <input 
+                id="register-password"
+                type="password" 
+                name="password" 
+                required 
+                autocomplete="new-password"
+                class="mt-1 block w-full rounded-lg border-slate-300 shadow-sm focus:border-slate-400 focus:ring-slate-400 sm:text-sm"
+                placeholder="Create a password"
+              >
             </div>
-            <div class="flex justify-end space-x-3">
-              <button type="button" onclick="closeRegisterModal()" class="rounded-lg border border-slate-300 bg-white px-4 py-2 text-sm font-medium text-slate-700 hover:bg-slate-50">Cancel</button>
-              <button type="submit" class="rounded-lg bg-slate-900 px-4 py-2 text-sm font-semibold text-white hover:bg-black">Register</button>
+            <div class="flex items-center">
+              <input id="terms" name="terms" type="checkbox" required class="h-4 w-4 rounded border-slate-300 text-slate-600 focus:ring-slate-500">
+              <label for="terms" class="ml-2 block text-sm text-slate-700">
+                I agree to the <a href="#" class="text-slate-600 hover:text-slate-500">Terms of Service</a> and <a href="#" class="text-slate-600 hover:text-slate-500">Privacy Policy</a>
+              </label>
+            </div>
+            <div>
+              <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-slate-900 hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-slate-500">
+                Create account
+              </button>
             </div>
           </form>
-          <p class="mt-4 text-center text-sm text-slate-600">
-            Already have an account? <button onclick="showLoginModal()" class="text-slate-900 hover:underline">Login</button>
-          </p>
+          <div class="mt-6">
+            <div class="relative">
+              <div class="absolute inset-0 flex items-center">
+                <div class="w-full border-t border-slate-300" />
+              </div>
+              <div class="relative flex justify-center text-sm">
+                <span class="px-2 bg-white text-slate-500">Or continue with</span>
+              </div>
+            </div>
+            <div class="mt-6 text-center">
+              <p class="text-sm text-slate-600">
+                Already have an account? 
+                <button onclick="showLoginModal()" class="font-medium text-slate-900 hover:text-slate-700">Sign in</button>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -268,7 +357,8 @@
 
       // Update UI for authenticated user
       function updateUIForAuthenticatedUser() {
-        userInfo.textContent = `Welcome, ${currentUser.name}`;
+        const adminBadge = currentUser.isAdmin ? ' (Admin)' : '';
+        userInfo.textContent = `Welcome, ${currentUser.name}${adminBadge}`;
         userInfo.classList.remove('hidden');
         loginBtn.classList.add('hidden');
         logoutBtn.classList.remove('hidden');
@@ -295,6 +385,7 @@
         loginForm.addEventListener('submit', handleLogin);
         registerForm.addEventListener('submit', handleRegister);
         logoutBtn.addEventListener('click', handleLogout);
+        loginBtn.addEventListener('click', showLoginModal);
       }
 
       // Perform search
