Fix library login button to open modal

--- a/backend/public/library.html
+++ b/backend/public/library.html
@@ -226,6 +226,7 @@
         loginForm.addEventListener('submit', handleLogin);
         registerForm.addEventListener('submit', handleRegister);
         logoutBtn.addEventListener('click', handleLogout);
+        loginBtn.addEventListener('click', showLoginModal);
       }
 
       // Load user documents
