Ensure session-aware fetch calls

--- a/backend/public/explore.html
+++ b/backend/public/explore.html
@@ -172,6 +172,14 @@
       const loginForm = document.getElementById('login-form');
       const registerForm = document.getElementById('register-form');
 
+      function fetchWithCredentials(url, options = {}) {
+        const config = { ...options, credentials: 'include' };
+        if (options.headers) {
+          config.headers = { ...options.headers };
+        }
+        return fetch(url, config);
+      }
+
       // Initialize app
       document.addEventListener('DOMContentLoaded', () => {
         checkAuthStatus();
@@ -182,7 +190,7 @@
       // Check authentication status
       async function checkAuthStatus() {
         try {
-          const response = await fetch('/api/auth/me');
+          const response = await fetchWithCredentials('/api/auth/me');
           if (response.ok) {
             const data = await response.json();
             currentUser = data.user;
@@ -226,7 +234,7 @@
       // Load public documents
       async function loadPublicDocuments() {
         try {
-          const response = await fetch('/api/documents/public');
+          const response = await fetchWithCredentials('/api/documents/public');
           const data = await response.json();
 
           if (data.success) {
@@ -280,7 +288,7 @@
         }
 
         try {
-          const response = await fetch(`/api/search?q=${encodeURIComponent(query)}&filter=public`);
+          const response = await fetchWithCredentials(`/api/search?q=${encodeURIComponent(query)}&filter=public`);
           const data = await response.json();
 
           if (data.ok) {
@@ -350,7 +358,7 @@
         const data = Object.fromEntries(formData);
         
         try {
-          const response = await fetch('/api/auth/login', {
+          const response = await fetchWithCredentials('/api/auth/login', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(data)
@@ -380,7 +388,7 @@
         const data = Object.fromEntries(formData);
         
         try {
-          const response = await fetch('/api/auth/register', {
+          const response = await fetchWithCredentials('/api/auth/register', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(data)
@@ -405,7 +413,7 @@
       // Handle logout
       async function handleLogout() {
         try {
-          await fetch('/api/auth/logout', { method: 'POST' });
+          await fetchWithCredentials('/api/auth/logout', { method: 'POST' });
           currentUser = null;
           updateUIForGuestUser();
           alert('Logged out successfully!');
