--- a/backend/public/app.html
+++ b/backend/public/app.html
@@ -113,7 +113,7 @@
                 <label for="file-input" class="block text-sm font-medium text-slate-700">Choose File</label>
                 <input
                   id="file-input"
-                  name="document"
+                  name="file"
                   type="file"
                   accept=".pdf,.txt"
                   class="mt-1 block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-slate-50 file:text-slate-700 hover:file:bg-slate-100"
